cargo-features = ["profile-rustflags"]

[package]
name = "RustFFI"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
overflow-checks = false
lto = true
codegen-units = 1
debug = true
rustflags = ["-C", "target-cpu=native"]


[dependencies]
radix-heap = "0.4.2"
jni = "0.21.1"
rayon = "1.10.0"
kiss3d = "0.35.0"
chrono = "0.4.38"

[lib]
name = "RustFFI"
crate-type = ["cdylib"]
test = true
